s/new Number/Number.valueOf/g
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@771135 13f79535-47bb-0310-9956-ffa450edef68