@@ -186,7 +186,7 @@ public class RequirementServices {
 
             Map results = ServiceUtil.returnSuccess();
             results.put("requirementsForSupplier", requirements);
-            results.put("distinctProductCount", new Integer(products.size()));
+            results.put("distinctProductCount", Integer.valueOf(products.size()));
             results.put("quantityTotal", quantity);
             results.put("amountTotal", amountTotal);
             return results;
